Assignment/Rithick K V/Assignment 4/Assignment 4 - 2,3,4 - job-portal/kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-portal-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: job-portal-flask
