Assignment/Rithick K V/Assignment 4/Assignment 4 - 2,3,4 - job-portal/kubernetes/flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-portal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  # ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: job-portal-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
